front conectado